--- a/src/Styles/Hero.css
+++ b/src/Styles/Hero.css
@@ -21,6 +21,7 @@
 }
 
 .hero-content {
+  margin-top: 8vh;
   max-width: 700px;
   position: relative;
   z-index: 10;
@@ -45,7 +46,7 @@
 /* Buttons */
 .btn {
   display: inline-block;
-  padding: 13px 35px;
+  padding: 10px 35px;
   border-radius: 50px;
   text-decoration: none;
   font-weight: 600;
@@ -60,9 +61,7 @@
 }
 
 .btn-primary:hover {
-  background-color: var(--dark-pink);
   transform: translateY(-3px);
-  box-shadow: 0 5px 10px rgba(233, 30, 99, 0.3);
 }
 
 /* --- Floating Hearts Animation --- */
@@ -132,7 +131,7 @@
 
 /* Updated hero title */
 .hero-title {
-  font-size: 3.2rem;
+  font-size: 4rem;
   font-weight: 700;
   color: #ffffff;
   line-height: 1.15;
