--- a/src/index.css
+++ b/src/index.css
@@ -9,24 +9,13 @@ body {
   scroll-behavior: smooth;
   user-select: none;
 }
-
-/* ✨ Hide Scrollbar (but keep scrolling working) */
-
-/* Chrome / Safari / Edge */
 body::-webkit-scrollbar {
   display: none;
 }
-
-/* Firefox */
-body {
-  scrollbar-width: none;
-}
-
-/* IE + Old Edge */
-body {
-  -ms-overflow-style: none;
-}
-
 * {
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
