--- a/src/Styles/Premium.css
+++ b/src/Styles/Premium.css
@@ -2,7 +2,7 @@
 .premium-wrapper {
   background: #ffeef3;
   min-height: 100vh;
-  padding-top: 100px; /* space below navbar */
+  padding-top: 100px; 
 }
 
 /* Header */
