--- a/src/Styles/Menu_bar.css
+++ b/src/Styles/Menu_bar.css
@@ -33,8 +33,8 @@
   width: 33.33%;
   height: 100%;
   border: none;
-  background: #ffd6e8; /* NON selected bg */
-  color: #ff2f86; /* NON selected text */
+  background: #ffd6e8; 
+  color: #ff2f86; 
   font-size: 17px;
   font-weight: 600;
   cursor: pointer;
