--- a/src/Styles/Payment.css
+++ b/src/Styles/Payment.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: #fff0f5; /* light pink */
+  background: #fff0f5; 
   color: #333;
   font-family: "Poppins", sans-serif;
   overflow: hidden;
